Some refactor before adding JavaFX